--- a/data-generator/package.json
+++ b/data-generator/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@faker-js/faker": "^9.8.0"
+    "@faker-js/faker": "^9.8.0",
+    "dotenv": "^17.2.3",
+    "mssql": "^12.1.0"
   },
   "devDependencies": {
+    "@types/mssql": "^9.1.8",
     "@types/node": "^24.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
